[package]
name = "code-tardis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive"] }
dirs = "4.0.0"
eyre = "0.6.8"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.88", features = ["preserve_order"] }
url = { version = "2.3.1", features = ["serde"] }
walkdir = "2.3.2"
